# dotfiles

./: .Brewfile  .Brewfile##template  .chruby.zsh  .ctags  .dprint.jsonc  .fzf.zsh  .gemrc  .gitconfig  .gitconfig##template  .gitconfig-personal  .gitconfig-work  .irbrc  .tmux.conf  .tmux.conf##template  .vale.ini  .zshenv  .zshrc  Brewfile  Gemfile  README.md
.bundle/: config
.config/: CLAUDE.md  starship.toml  topgrade.toml  xterm-256color-italic.terminfo
.config/alacritty/: alacritty.toml  alacritty.yml  colors.toml  keyboard.toml
.config/bat/: config
.config/efm-langserver/: config.yaml
.config/fastfetch/: config.jsonc
.config/fish/: .gitignore  config.fish  fish_plugins
.config/gh/: config.yml  hosts.yml
.config/ghostty/: config
.config/kitty/: kitty.conf
.config/marksman/: config.toml
.config/nvim/: .gitignore  .luarc.json  CLAUDE.md  FORMATTING_SETUP.md  coc-settings.json  coc-settings.json##template  dprint.jsonc  init.lua  init.vim  lazy-lock.json  plugins.vim  rocks.toml  stylua.toml
.config/nvim.lazy.back/: lazy-lock.json  lazyvim.json
.config/opencode/: opencode.json
.config/rio/: config.toml
.config/selfie/: config.yml
.config/wezterm/: wezterm.lua
.config/yadm/: bootstrap
.config/yadm/bootstrapper/: Cargo.toml
.config/yadm/bootstrapper/src/: app.rs  homebrew.rs  main.rs  os_package_manager.rs  tmux.rs
.config/yamlfmt/: yamlfmt.yml
.config/yamllint/: config
.config/zed/: settings.json  settings_backup.json
.config/zsh/: chruby.zsh  (+10 more)
.tmuxinator/: dev.yml  kraken.yml
.yadm/: bootstrap
Development/: rustfmt.toml
(+466 files in other folders)
