[package]
name = "bootstrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
simplelog = { version = "0.11", features = ["paris"] }
stromboli = { path = "../../../Development/projects/stromboli" }
